[package]
name = "mergebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
ethers = { version = "0.17.0", features = ["ws", "abigen", "rustls", "openssl"] }
eyre = "0.6.8"
log = "0.4.17"
tokio = { version = "1.21.0", features = ["full"] }
